automatically backed up by learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -2,6 +2,7 @@
 <html>
   <head></head>
   <body>
-    <h1><% "The date is #{Date.today.strftime("%A, %B %d, %Y")}"%></h1>
+    <% date = Date.today.strftime("%A, %B %d, %Y") %>
+    <h1><%= "The date is #{date}"%></h1>
   </body>
 </html>
